--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.5.RELEASE</spring.version>
 		<!--spring3才有MappingJacksonJsonView,spring4升级为MappingJackson2JsonView,代码有改变-->
 		<!--<spring.version>3.2.18.RELEASE</spring.version>-->
@@ -191,11 +192,31 @@
 			<version>2.8.0</version>
 		</dependency>
 		<!--jackson工具包-->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
-		</dependency>
+		</dependency>-->
+        <!--<dependency>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-parent</artifactId>
+            <version>2.9</version>
+        </dependency>-->
+        <!--<dependency>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-bom</artifactId>
+            <version>2.8.8</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.8</version>
+        </dependency>
 		<!-- 日志配置 -->
 		<!--log4j-->
 		<dependency>
@@ -286,8 +307,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
