--- a/settings/test.properties
+++ b/settings/test.properties
@@ -15,7 +15,8 @@ jdbc.maxIdleTime=40000
 #jdbc.url=jdbc:mysql://202.115.161.209:3306/net_literature?useUnicode=true&characterEncoding=utf8
 #jdbc.username=root
 #jdbc.password=cs.swust
-jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&characterEncoding=utf8
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&useSSL=false&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=150801
 
