首页查看最近更新情况已优化，作者作品统计页面统计接口已优化，网站统计页面已优化，单个作者/作品评论分词分析未验证完成

--- a/settings/test.properties
+++ b/settings/test.properties
@@ -1,5 +1,8 @@
 mongo.databaseName=iLiterature
-mongo.hosts=127.0.0.1
+#实验室服务器
+mongo.hosts=192.168.0.29
+#本地
+#mongo.hosts=127.0.0.1
 mongo.port=27017
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
@@ -12,13 +15,15 @@ jdbc.removeAbandoned=true
 jdbc.removeAbandonedTimeout=10
 jdbc.idleConnectionTestPeriod=5
 jdbc.maxIdleTime=40000
-#jdbc.url=jdbc:mysql://202.115.161.209:3306/net_literature?useUnicode=true&characterEncoding=utf8
-#jdbc.username=root
-#jdbc.password=cs.swust
-jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&characterEncoding=utf8
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&useSSL=false&characterEncoding=utf8
+#实验室服务器
+jdbc.url=jdbc:mysql://192.168.0.29:3306/iliterature?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=150801
+jdbc.password=cs.swust
+#本地
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&characterEncoding=utf8
+##jdbc.url=jdbc:mysql://127.0.0.1:3306/iliterature_new?useUnicode=true&useSSL=false&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=150801
 
 #path of userLibrary
 userLibrary=CLASSPATH/userLibrary.dic
